plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.13'
	id 'io.spring.dependency-management' version '1.1.7'
    id 'com.google.protobuf' version '0.9.6'
}

compileJava {
	options.compilerArgs << '-Xlint'
}

protobuf {
    protoc { artifact = "com.google.protobuf:protoc:4.33.5" }
}

group = 'com.disk91'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '21'
}

repositories {
	mavenCentral()
	maven {
		url "https://repo.eclipse.org/content/repositories/paho-releases/"
	}
}

bootJar {
	launchScript()
}

dependencies {
	compileOnly 'org.springframework.boot:spring-boot-starter-data-jpa'

	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation "org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.5"
    implementation "io.micrometer:micrometer-registry-prometheus:1.16.2"
    implementation "org.postgresql:postgresql:42.7.9"
    implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version : '2.8.17'
	implementation "org.bouncycastle:bcprov-jdk18on:1.84"
    implementation "io.jsonwebtoken:jjwt-api:0.13.0"
    implementation "com.uber:h3:4.4.0"

    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation "org.flywaydb:flyway-core:11.20.2"
    implementation "com.google.protobuf:protobuf-java:4.33.5"

    // Markdown parser
    implementation "org.commonmark:commonmark:0.27.1"

    // Spring AI dependencies
    implementation platform("org.springframework.ai:spring-ai-bom:1.1.4")
	implementation 'org.springframework.ai:spring-ai-starter-model-ollama'
	implementation 'org.springframework.ai:spring-ai-starter-model-openai'
	implementation 'org.springframework.ai:spring-ai-starter-vector-store-pgvector'

	// Firebase Admin SDK
	implementation "com.google.firebase:firebase-admin:9.8.0"

    runtimeOnly "io.jsonwebtoken:jjwt-impl:0.13.0"
    runtimeOnly "io.jsonwebtoken:jjwt-jackson:0.13.0"
    runtimeOnly "org.flywaydb:flyway-database-postgresql:11.20.2"

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation "io.zonky.test:embedded-postgres:2.2.0"
    testImplementation "io.zonky.test:embedded-database-spring-test:2.7.1"

}

tasks.named('test') {
    jvmArgs = [
            '-XX:+EnableDynamicAgentLoading',
    ]
    useJUnitPlatform()
}
